tests/paczka2/big_fuzzy/34956222.err
Error in line 6: 9ANuie1R A372 73,6
Error in line 7: 9ANuie1R S457 708,2
Error in line 26: 9ANuie1R S457 33,89
Error in line 21: 2dmWC A774 63,0
Error in line 9: 9ANuie1R A372 14,9
Error in line 27: qfwJARNXr8 A774 218,6
Error in line 33: 2dmWC S457 15,8
Error in line 38: 2dmWC S592 40,9
Error in line 36: qfwJARNXr8 S457 54,7
Error in line 44: MAMt4xv4O A774 79,8
Error in line 40: 2dmWC A774 98,2
Error in line 47: MAMt4xv4O S592 52,6
Error in line 34: 9ANuie1R S457 100,3
Error in line 43: qfwJARNXr8 S592 44,9
Error in line 53: qfwJARNXr8 A774 18,0
Error in line 58: A372 S457 -1,7
Error in line 54: A372 S457 6,6
Error in line 62: A372 A774 92,5
Error in line 69: wSrkuNvtwi S592 61,2
Error in line 73: wSrkuNvtwi A372 70,6
Error in line 67: qfwJARNXr8 A774 382,4
Error in line 77: qfwJARNXr8 S457 84,3
Error in line 83: GZYFG7kcT A77G 17,9
Error in line 75: wSrkuNvtwi A774 2,9
Error in line 96: A372 A774 20,7
Error in line 119: qfwJARNXr8 A774 41,7
Error in line 100: 9ANuie1R A774 59,1
Error in line 130: 9ANuie1R S592 y0,1
Error in line 135: MAMt4xv4O S592 38,1
Error in line 142: qfwJARNXr8 S592 46,71
Error in line 154: MAMt4xv4O A372 25,6
Error in line 129: 9ANuie1R S592 37,6
Error in line 161: wSrkuNvtwi S592 78,0
Error in line 174: A372 S457 22,9
Error in line 190: A372 S457 68,0
Error in line 198: 2dmWC S457 98,1
Error in line 200: MAMt4xv4O A774 79,1
Error in line 209: wSrkuNvtwi S592 86,0
Error in line 202: qfwJARNXr8 S592 187,7
Error in line 205: A372 A774 84,2
Error in line 225: qfwJARNXr8 S45] 69,0
Error in line 226: wSrkuNvtwi A774 8,7
Error in line 234: wSrkuNvtwi S457 99,5
Error in line 231: qfwJARNXr8 S457 33,8
